# motion_planning_for_aubo

./: CMakeLists.txt  package.xml  teb_planner.rviz
include/teb_planner/: basic_base_teb_edges.h  canvas.h  color_table.h  common.h  distance_calculations.h  distance_map_update.h  edge_kinematics.h  fraction_imported.h  local_distance_map.h  misc.h  optimal_planner.h  path_smooth.h  penalties.h  picture_map_loader.h  planner_interface.h  point.h  pose_se2.h  robot_footprint_model.h  teb_config.h  teb_edges.h  teb_vertex.h  thread_pool.h  time_elastic_band.h
launch/: teb_launch.py
msg/agv_path_msgs/: CMakeLists.txt  package.xml
msg/agv_path_msgs/msg/: AgvPath.msg
src/: canvas.cpp  common.cpp  fake_robot_node.cpp  generate_global_path.cpp  optimal_planner.cpp  path_smooth.cpp  publisher_node.cpp  subscriber_node.cpp  teb_node.cpp  test_path_smooth.cpp  thread_pool.cpp  time_elastic_band.cpp
